cmake_minimum_required(VERSION 3.25)
project(cspice LANGUAGES C)

file(GLOB CSPICE_SOURCE CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/cspice/src/cspice/*.c")
set(INCLUDE_PATH "${PROJECT_SOURCE_DIR}/cspice/include")
if(STATIC_BUILD)
    add_library(cspice STATIC ${CSPICE_SOURCE})
else()
    add_library(cspice SHARED ${CSPICE_SOURCE})
endif()
target_include_directories(cspice PUBLIC "${INCLUDE_PATH}")
if(WIN32)
    target_compile_definitions(cspice PUBLIC
        _COMPLEX_DEFINED MSDOS OMIT_BLANK_CC NON_ANSI_STDIO _CRT_SECURE_NO_WARNINGS)
    if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
        # N0067 contains f2c/K&R declarations that GCC 15's new C23 default
        # rejects. Compile this legacy upstream source in its original dialect.
        target_compile_options(cspice PRIVATE -std=gnu89 -Wno-error=implicit-int)
    endif()
    set_target_properties(cspice PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
else()
    target_compile_definitions(cspice PUBLIC NON_UNIX_STDIO)
    target_compile_options(cspice PUBLIC $<$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>:-m64> -ansi -fPIC)
    target_compile_options(cspice PRIVATE -Wno-error=implicit-function-declaration)
endif()
if(NOT _SKIP_HEADERS)
    file(GLOB SPICE_HEADERS "${INCLUDE_PATH}/*.h")
    install(FILES ${SPICE_HEADERS} DESTINATION include/cspice)
endif()
set_target_properties(cspice PROPERTIES SOVERSION 67)
install(TARGETS cspice EXPORT cspice ARCHIVE DESTINATION lib LIBRARY DESTINATION lib RUNTIME DESTINATION bin)
